# cipher_tsai_jeffray

./: README.md
cipher_jt3293/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
cipher_jt3293/docs/: Makefile  conf.py  example.ipynb  make.bat
cipher_jt3293/src/cipher_jt3293/: __init__.py
cipher_jt3293/tests/: test_cipher_jt3293.py
cipher_jt3293_1/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
cipher_jt3293_1/docs/: Makefile  conf.py  example.ipynb  make.bat
cipher_jt3293_1/src/cipher_jt3293_1/: __init__.py  cipher_jt3293_1.py
cipher_jt3293_1/tests/: test_cipher_jt3293_1.py
