[tool.poetry]
name = "cipher_jt3293"
version = "0.1.0"
description = "Python package for MDS HW7."
authors = ["Jeffray Tsai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
